--- a/css/styles.css
+++ b/css/styles.css
@@ -1,121 +1,112 @@
 :root {
-    --main-text-color: #757575;
-    --title-color:#212121;
-    --brand-color: #2196F3;
-    --white-title-color: #FFFFFF;
+  --main-text-color: #757575;
+  --title-color: #212121;
+  --brand-color: #2196f3;
+  --white-title-color: #ffffff;
 
-    --bg-color-white: #FFFFFF;
-    --bg-color-grey: #2F303A;
-    --bg-color-dark-white: #F5F4FA;
+  --bg-color-white: #ffffff;
+  --bg-color-grey: #2f303a;
+  --bg-color-dark-white: #f5f4fa;
 
-    
-
-    --logo-font: 'Raleway', sans-serif;
-    --main-font: 'Roboto', sans-serif;
-    
+  --logo-font: 'Raleway';
+  --main-font: 'Roboto';
 }
 
 /**reset styles**/
 .link {
-    text-decoration: none;
-    font-family: var(--main-font);
-}
-
-.link:hover,
-.link:focus {
-    color: var(--brand-color);
+  text-decoration: none;
+  font-family: var(--main-font);
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 /**general styles**/
 body {
-    font-family: var(--main-font);
-    color: var(--main-text-color);
+  font-family: var(--main-font), sans-serif;
+  color: var(--main-text-color);
 }
 
 a.current {
-    color: var(--brand-color);
+  color: var(--brand-color);
 }
 
 .subtitle {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42 / 36);
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-color);
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-color);
 }
 
 /** header **/
 .header-section {
-    background-color: var(--bg-color-white);
+  background-color: var(--bg-color-white);
 }
 
 /**logo**/
 .logo-black {
-    text-decoration: none;
-    font-family: var(--logo-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: calc(31 / 26);
-    letter-spacing: 0.03em;
-    color: var(--title-color);
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: calc(31 / 26);
+  letter-spacing: 0.03em;
+  color: var(--title-color);
 }
 
 .logo-white {
-    text-decoration: none;
-    font-family: var(--logo-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: calc(31 / 26);
-    letter-spacing: 0.03em;
-    color: var(--white-title-color);
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: calc(31 / 26);
+  letter-spacing: 0.03em;
+  color: var(--white-title-color);
 }
 
 .logo-web {
-    color: var(--brand-color);
+  color: var(--brand-color);
 }
 
 /**navigation**/
 
 .navigation {
-
 }
 
 .navigation-list {
-    
 }
-   
+
 .navigation-item {
-    
 }
 
 .navigation-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-    color: var(--title-color);  
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+
+.navigation-link:hover,
+.navigation-link:focus,
+.contacts-link:hover,
+.contacts-link:focus {
+  color: var(--brand-color);
 }
 
 /**header list**/
 .contacts-list {
-    
 }
 
 .contacts-item {
-
 }
 
 .contacts-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-    color: var(--main-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
 }
 
 /**main**/
@@ -123,207 +114,215 @@ a.current {
 /**section-1-hero**/
 
 .hero-section {
-    background-color: var(--bg-color-grey);
+  background-color: var(--bg-color-grey);
 }
 
 .hero-title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--white-title-color)
+  font-weight: 900;
+  font-size: 44px;
+  line-height: calc(60 / 44);
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--white-title-color);
 }
 
 .hero-button {
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30 / 16);
-    letter-spacing: 0.06em;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  text-align: center;
 
-    color: var(--white-title-color);
-    background-color: var(--brand-color);
+  color: var(--white-title-color);
+  background-color: var(--brand-color);
 
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 
-    width: 200px;
-    height: 50px;
-    left: 700px;
-    top: 430px;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: #188ce8;
-    color: var(--bg-color-white);
+  background-color: #188ce8;
+  color: var(--bg-color-white);
 }
-    
 
 /**Section-2-conses**/
 
 .conces-section {
-    
 }
 
 .conses-list {
-
 }
 
 .conses-item {
-
 }
 
 .conses-heading {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--title-color);
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-color);
 }
 
 .conses-text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(24 / 14);
-    letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
 }
 
 /**Section-3-What-we-do**/
 
 .what-we-do-section {
-
 }
 
 .what-we-do-list {
-
 }
 
 .what-we-do-item {
-
 }
 
 .what-we-do-image {
-
 }
 
 /**Section-4-our-team**/
 
 .our-team-section {
- background-color: var(--bg-color-dark-white);
+  background-color: var(--bg-color-dark-white);
 }
 
 .our-team-list {
-
 }
 
 .our-team-item {
-
 }
 
 .our-team-image {
-
 }
 
 .our-team-heading {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(19 / 16);
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(19 / 16);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-color);
 }
 
 .our-team-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: calc(19 / 16);
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: calc(19 / 16);
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /**footer**/
 
 .footer-section {
-    background-color: var(--bg-color-grey);
+  background-color: var(--bg-color-grey);
 }
 .footer-list {
-
 }
 
 .footer-item {
-
 }
 
 .footer-link-address {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(24 / 14);
-    letter-spacing: 0.03em;
-    color: var(--white-title-color);
-    font-style: normal;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--white-title-color);
+  font-style: normal;
 }
 .footer-link-contacts {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(24 / 14);
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    font-style: normal;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
 }
 
+.footer-link-contacts:hover,
+.footer-link-contacts:focus {
+  color: var(--white-title-color);
+}
 
 /**PORTFOLIO**/
 /**PORTFOLIO-FILTER**/
 .portfofio-filter-section {
-
 }
 
 .portfofio-filter-menu {
-
 }
 
 .portfolio-filter-item {
-
 }
-
-.portfolio-filter-btn {
-
-}
-
-/**filter-all**/
 
 .portfolio-btn {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(26 / 16);
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-color);
-    background-color: var(--bg-color-dark-white);
-    cursor: pointer;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    border: none;
-    width: 128px;
-    height: 38px;
-    left: 576px;
-    top: 174px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(26 / 16);
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-color);
+  background-color: var(--bg-color-dark-white);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  border: none;
+
+  width: 128px;
+  height: 38px;
+  left: 576px;
+  top: 174px;
+
+  cursor: pointer;
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
-    background-color: var(--brand-color);
-    color: var(--white-title-color);
+  background-color: var(--brand-color);
+  color: var(--white-title-color);
 }
 
 button.current-btn {
-    background-color: var(--brand-color);
-    color: var(--white-title-color);
+  background-color: var(--brand-color);
+  color: var(--white-title-color);
+}
+
+/**filter-page-all**/
+
+.filter-page-all {
+}
+
+.filter-item {
+}
+
+.filter-img {
+}
+
+.filter-heading {
+  font-size: 18px;
+  line-height: calc(36 / 18);
+  letter-spacing: 0.06em;
+  color: var(--title-color);
+}
+
+.filter-text {
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
 }
