--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,6 @@ a.current {
 }
 
 .our-team-text {
-  font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
   letter-spacing: 0.03em;
@@ -229,6 +228,10 @@ a.current {
 
 .footer-section {
   background-color: var(--bg-color-grey);
+}
+
+.footer-adress {
+font-style: normal;
 }
 .footer-list {
 }
@@ -241,14 +244,14 @@ a.current {
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--white-title-color);
-  font-style: normal;
+  
 }
 .footer-link-contacts {
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  font-style: normal;
+  
 }
 
 .footer-link-contacts:hover,
@@ -283,11 +286,6 @@ a.current {
   border-radius: 4px;
   border: none;
 
-  width: 128px;
-  height: 38px;
-  left: 576px;
-  top: 174px;
-
   cursor: pointer;
 }
 
@@ -321,7 +319,6 @@ button.current-btn {
 }
 
 .filter-text {
-  font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
